; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_copy.c_GetDecimalFromHex.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_copy.c_GetDecimalFromHex.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8)* @GetDecimalFromHex to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetDecimalFromHex(i8 signext %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = call i64 @isdigit(i8 zeroext %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %1
  %8 = load i8, i8* %3, align 1
  %9 = sext i8 %8 to i32
  %10 = sub nsw i32 %9, 48
  store i32 %10, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i8, i8* %3, align 1
  %13 = call signext i8 @tolower(i8 zeroext %12)
  %14 = sext i8 %13 to i32
  %15 = sub nsw i32 %14, 97
  %16 = add nsw i32 %15, 10
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %11, %7
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i64 @isdigit(i8 zeroext) #1

declare dso_local signext i8 @tolower(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
